--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "mobx": "^6.6.1",
@@ -35,6 +35,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "node-sass": "^7.0.1",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mobx": "^0.0.4",
@@ -49,7 +50,8 @@
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b master -d build",
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "eslintConfig": {
     "extends": [
